--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -12,7 +12,7 @@
 From {{etyl|enm|en}} {{m|enm|bidden}}, from the {{etyl|ang|en}} verb {{m|ang|biddan||ask, demand}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*bidjaną||to ask}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*gʷʰedʰ-}}. Conflated with the {{etyl|ang|en}} verb {{m|ang|bēodan||offer, announce}} (see Etymology 2 below). Compare West Frisian {{m|fy|bidde}}, Low German {{m|nds|bidden}}, Dutch {{m|nl|bidden}} ("to pray"), German {{m|de|bitten}}, Danish {{m|da|bede}}.
 
 ====Verb====
-{{en-verb|bids|bidding|bid|past2=bade|bid|past_ptc2=bidden}}
+{{en-verb|bids|bidding|bid|past2=bade|past3=bad|bid|past_ptc2=bidden}}
 
 # {{lb|en|transitive}} To issue a [[command]]; to [[tell]].
 #: ''He '''bade''' me to come in.''
@@ -22,8 +22,11 @@ From {{etyl|enm|en}} {{m|enm|bidden}}, from the {{etyl|ang|en}} verb {{m|ang|bid
 # {{lb|en|transitive}} To [[utter]] a [[greeting]] or [[salutation]].
 
 =====Usage notes=====
-The inflected forms {{m|en|bade}} and {{m|en|bidden}} are archaic. They remain in marginal use, particularly regarding greetings, as in “bade farewell”, but uninflected '''bid''' is significantly more common, and {{term||bidden}} is especially rare.<ref>“[http://grammarist.com/usage/bid-bade-bidden/ Bid, bade, bidden]”, ''Grammarist''</ref>  When it does occur, it is usually in an elevated, ironical or metaphorical style e.g "I have '''bidden''' farewell to my prospects of promotion."
-When '''bade''' is used in formal speech the pronunciation /bæd/ may be heard.  However, when a dated text is being read or recited (e.g. on stage, in school or in church etc.) /beɪd/ is quite usual.
+The inflected forms {{m|en|bade}}, {{m|en|bad}}, and {{m|en|bidden}} are archaic. They remain in marginal use, particularly regarding greetings, as in “bade farewell”, but uninflected '''bid''' is significantly more common, and {{term||bidden}} is especially rare.<ref>“[http://grammarist.com/usage/bid-bade-bidden/ Bid, bade, bidden]”, ''Grammarist''</ref>
+
+When it does occur, it is usually in an elevated, ironical or metaphorical style e.g "I have '''bidden''' farewell to my prospects of promotion."
+
+When '''bade''' or '''bad''' is used in formal speech the pronunciation /bæd/ may be heard.  However, when a dated text is being read or recited (e.g. on stage, in school or in church etc.) /beɪd/ is quite usual.
 
 =====Derived terms=====
 * {{l|en|bid adieu}}
