--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -56,6 +56,7 @@ Cognate with Scots {{m|sco|wecht}}, {{m|sco|weicht||weight}}, Saterland Frisian 
 |[[body weight]], [[bodyweight]]
 |counterweight
 |curb weight
+|featherweight
 |flyweight
 |heavyweight
 |kerb weight
