t+es:[[conveler]] ([[WT:EDIT|Assisted]]) <seize#39888479>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -118,6 +118,7 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 * Czech: {{t|cs|mít záchvat|impf}}, {{t|cs|dostat záchvat|pf}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|convulsionar}}, {{t|pt|[[convulsionar]]-[[se]]}}, {{t|pt|convulsar}}, {{t|pt|convelir}},
+* Spanish: {{t|es|conveler}}
 {{trans-bottom}}
 
 ===References===
