/* Derived terms */ <weight#39891984>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -62,6 +62,7 @@ Cognate with Scots {{m|sco|wecht}}, {{m|sco|weicht||weight}}, Saterland Frisian 
 |kerb weight
 |lightweight
 |lose weight
+|overweight
 |paperweight
 |pseudoweight
 |pull one's weight
@@ -69,6 +70,7 @@ Cognate with Scots {{m|sco|wecht}}, {{m|sco|weicht||weight}}, Saterland Frisian 
 |throw one's weight around
 |topweight
 |triweight
+|underweight
 |[[weightful]], [[weightfully]], [[weightfulness]]
 |weightless
 |weightlifter
