--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -145,6 +145,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{m|ang|stæf}}, from 
 * German: {{t+|de|Belegschaft|f}}, {{t+|de|Personal|n}}, {{t+|de|Stab|m}}
 * Greek: {{t+|el|προσωπικό|n}}, {{t+|el|επιτελείο|n}}
 * Hungarian: {{t+|hu|személyzet}}
+* Icelandic: {{t|is|starfsfólk|n}}
 * Irish: {{t+|ga|foireann|f}}
 * Italian: {{t+|it|personale|m}}, {{t+|it|organico|m}}
 * Japanese: {{t+|ja|人員|tr=じんいん, jin'in|sc=Jpan}}, {{t+|ja|スタッフ|tr=sutaffu|sc=Jpan}}
