--- a/en/p/PALplus.803394.wikitext
+++ b/en/p/PALplus.803394.wikitext
@@ -12,4 +12,4 @@
 #*: '''PALplus''' […] is the result of a cooperative project. […]. By 1995 they wanted to provide an Enhanced Definition Television system (EDTV) compatible with exisitng receivers. '''PALplus''' has been transmitted by a few broadcasters since 1994.
 
 ====External links====
-* {{pedialite}}
+{{pedialite}}
