t+ga:[[altaigh]] t-balance ([[WT:EDIT|Assisted]]) <say grace#39911151>

--- a/en/s/say grace.776084.wikitext
+++ b/en/s/say grace.776084.wikitext
@@ -16,6 +16,7 @@
 * Finnish: [[lukea]] [[ruokarukous]]
 * French: {{t|fr|faire la bénédicité}}
 * German: {{t|de|das Tischgebet sprechen}}
+* Irish: {{t|ga|altaigh}}
 {{trans-mid}}
 * Portuguese: {{t|pt|dar graças}}
 * Russian: [[прочесть молитву]] ([[трапеза|перед трапезой]]) (pročést’ molítvu [péred trápezoj])
