--- a/en/n/nonjudgmentally.855649.wikitext
+++ b/en/n/nonjudgmentally.855649.wikitext
@@ -1,13 +1,13 @@
 ==English==
 
 ===Alternative forms===
-* [[non-judgementally]]
+* [[nonjudgementally]]
 
 ===Adverb===
 {{en-adv}}
 
 # In a [[nonjudgmental]] manner; without [[evaluation]]; [[acceptingly]].
-#: ''The therapist paraphrased '''nonjudmentally''' what the client had said.''
+#: ''The therapist paraphrased '''nonjudgmentally''' what the client had said.''
 
 ====Related terms====
 * [[judgment]]
