--- a/en/z/zeppola.856126.wikitext
+++ b/en/z/zeppola.856126.wikitext
@@ -8,7 +8,7 @@
 From the {{etyl|it|en}} {{m|it|zeppola}}
 
 ===Noun===
-{{en-noun|zeppole}}
+{{en-noun|zeppole|zeppoli}}
 
 # Any of several varieties of traditional fried [[sweet]] from southern Italy
 #* {{quote-journal|2009|January 25|Jeff Vandam|Brio Inside the Brownstones|New York Times|url=http://www.nytimes.com/2009/01/25/realestate/25livi.html
