--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -2,7 +2,7 @@
 ==Dutch==
 
 ===Etymology===
-From {{der|nl|id|bahasa}}, from {{der|nl|sa|भाषा||language|tr=bhāṣā}}.
+{{bor|nl|id|bahasa}}, eventually from {{der|nl|sa|भाषा||language}}.
 
 ===Noun===
 {{nl-noun|n|-|-}}
