--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -89,6 +89,7 @@ From {{etyl|enm|en}} {{m|enm|bageard||marked by a badge}}, from {{m|enm|bage||ba
 * Lithuanian: {{t+|lt|barsukas|?}}, {{t|lt|opšrus|?}}
 {{trans-mid}}
 * Low German:
+*: Dutch Low Saxon: {{t-needed|nds-nl}}
 *: German Low German: {{t|nds-de|Tacks|m}}, {{t|nds-de|Daks}}
 * Macedonian: {{t|mk|ја́зовец|m}}
 * Malay: {{t|ms|bejar}}
