--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -42,6 +42,7 @@ Rarely used in informal speech. The past participle [[beholden]] now has a meani
 * Hebrew: {{t+|he|הִנֵּה|tr=hiné|sc=Hebr}}, {{t|he|הֲרֵי|tr=haréi}}
 * Hungarian: {{t+|hu|meglát}}, {{t+|hu|észrevesz}}, {{t+|hu|megpillant}}
 * Icelandic: {{t+|is|sjá}}
+* Ido: {{t+|io|yen}}
 * Indonesian: {{t+|id|lihat}}
 * Irish:
 *: Old Irish: {{t|sga|ad·cí}}
