--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -2,7 +2,7 @@
 [[File:Bleeding finger.jpg|thumb|250px|upright|A bleeding wound on a finger.]]
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|bleden}}, from {{etyl|ang|en}} {{m|ang|blēdan||to bleed}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*blōþijaną||to bleed}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*blōþą||blood}}. Cognate with Scots {{m|sco|blede}}, {{m|sco|bleid||to bleed}}, West Frisian {{m|fy|bliede||to bleed}}, Saterland Frisian {{m|stq|bläide||to bleed}}, Dutch {{m|nl|bloeden||to bleed}}, Low German {{m|nds|blöden||to bleed}}, German {{m|de|bluten||to bleed}}, Danish {{m|da|bløde||to bleed}}, Swedish {{m|sv|blöda||to bleed}}.
+From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en|gem-pro|*blōþijaną||to bleed}}, from {{m|gem-pro|*blōþą||blood}}. Cognate with {{cog|sco|blede}}, {{m|sco|bleid||to bleed}}, {{cog|fy|bliede||to bleed}}, {{cog|stq|bläide||to bleed}}, {{cog|nl|bloeden||to bleed}}, Low German {{m|nds|blöden||to bleed}}, {{cog|de|bluten||to bleed}}, {{cog|da|bløde||to bleed}}, {{cog|sv|blöda||to bleed}}.
 
 ===Pronunciation===
 * {{IPA|/ˈbliːd/|lang=en}}
@@ -12,7 +12,7 @@ From {{etyl|enm|en}} {{m|enm|bleden}}, from {{etyl|ang|en}} {{m|ang|blēdan||to 
 {{en-verb|bleeds|bleeding|bled}}
 
 # {{lb|en|intransitive|of an animal}} To [[lose]] [[blood]] through an [[injured]] [[blood vessel]].
-#: ''If her nose '''bleeds''' try to use ice.''
+#: ''If her nose '''bleeds''', try to use ice.''
 # {{lb|en|transitive}} To [[let]] or [[draw]] [[blood]] from.
 # {{lb|en|transitive}} To [[take]] large amounts of [[money]] from.
 # {{lb|en|transitive}} To steadily lose (something vital).
@@ -188,8 +188,22 @@ From {{etyl|enm|en}} {{m|enm|bleden}}, from {{etyl|ang|en}} {{m|ang|blēdan||to 
 [[Category:English ergative verbs]]
 [[Category:English irregular verbs]]
 [[Category:en:Bodily fluids]]
-
 [[Category:1000 English basic words]]
+
+----
+
+==Plautdietsch==
+
+===Adjective===
+{{head|pdt|adjective}}
+
+# [[shy]], [[coy]]
+# [[modest]]
+# [[withdrawn]]
+# [[timid]], [[reticent]], [[reluctant]]
+
+====Derived terms====
+* {{l|pdt|Bleedheit}}
 
 [[ar:bleed]]
 [[az:bleed]]
