t+el:[[αντίστροφη μέτρηση]] ([[WT:EDIT|Assisted]]) <countdown#40023322>

--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -50,6 +50,7 @@ From {{compound|count|down|lang=en}}.
 * Dutch: {{t|nl|aftelling|f}}
 * German: {{t|de|Zeitkontrolle|f}}
 {{trans-mid}}
+* Greek: {{t+|el|αντίστροφη μέτρηση|f}}
 * Portuguese: {{t|pt|contagem regressiva}}, {{t|pt|retrocontagem|f}}
 * Russian: {{t|ru|обра́тный отсчёт|m}}
 {{trans-bottom}}
