/* Adverb */ <four score and seven years ago#40099702>

--- a/en/f/four score and seven years ago.803552.wikitext
+++ b/en/f/four score and seven years ago.803552.wikitext
@@ -3,7 +3,7 @@
 
 HOW TO DIE
 
-===Adverb===
+===DEATH===
 {{head|en|adverb|head=[[four]] [[score]] [[and]] [[seven]] [[years]] [[ago]]}}
 
 # {{lb|en|idiomatic}} As an [[opener]], a sometimes sarcastic [[indicator]] to indicate a past event being mentioned is particularly important.
