--- a/en/f/four score and seven years ago.803552.wikitext
+++ b/en/f/four score and seven years ago.803552.wikitext
@@ -6,4 +6,4 @@ HALLOW
 ===Adverb===
 {{head|en|adverb|head=[[four]] [[score]] [[and]] [[seven]] [[years]] [[ago]]}}
 
-# {{lb|en|idiomatic}} As an [[opener]], a sometimes sarcastic [[indicator]] to indicate a past event being mentioned is particularly important.
+DIABOLIC STUFF CENSORED
