--- a/en/f/four score and seven years ago.803552.wikitext
+++ b/en/f/four score and seven years ago.803552.wikitext
@@ -1,7 +1,10 @@
 ==English==
-{{wikipedia|SUCKY  Address}}
+{{wikipedia|Gettysburg Address}}
 
+===Etymology===
+In Abraham Lincoln's Gettysburg Address, he used this (at the time) commonplace measure of [[score]], meaning "20 [[year]]s". In modern language, it would be simply "87 years ago". However, the widespread notoriety of Lincoln's address, the unusual wording and its status as the first words of the speech have caused the phrase to enter the public consciousness.
 
 ===Adverb===
-{DIDDDIIDDIIDDIIDIDIDIDIDIDIDIDIDIDIDIDIDIDIDIE
- STUFF CENSORED
+{{head|en|adverb|head=[[four]] [[score]] [[and]] [[seven]] [[years]] [[ago]]}}
+
+# {{lb|en|idiomatic}} As an [[opener]], a sometimes sarcastic [[indicator]] to indicate a past event being mentioned is particularly important.
