[[User:Daniel Carrero/term cleanup|term cleanup]] <bare-butt#40549964>

--- a/en/b/bare-butt.741632.wikitext
+++ b/en/b/bare-butt.741632.wikitext
@@ -5,7 +5,7 @@
 * {{l|en|barebutt}}
 
 ===Etymology===
-{{term|bare||naked}} + {{term|butt||bottom}}.
+{{m|bare||naked}} + {{m|butt||bottom}}.
 
 ===Adjective===
 {{en-adj|-}}
