[[User:Daniel Carrero/term cleanup|term cleanup]] <bare-butt#40549966>

--- a/en/b/bare-butt.741632.wikitext
+++ b/en/b/bare-butt.741632.wikitext
@@ -5,7 +5,7 @@
 * {{l|en|barebutt}}
 
 ===Etymology===
-{{m|bare||naked}} + {{m|butt||bottom}}.
+{{m|en|bare||naked}} + {{m|en|butt||bottom}}.
 
 ===Adjective===
 {{en-adj|-}}
