--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -22,7 +22,7 @@ From {{etyl|enm|en}} {{m|enm|bidden}}, from the {{etyl|ang|en}} verb {{m|ang|bid
 # {{lb|en|transitive}} To [[utter]] a [[greeting]] or [[salutation]].
 
 =====Usage notes=====
-The inflected forms {{m|en|bade}}, {{m|en|bad}}, and {{m|en|bidden}} are archaic. They remain in marginal use, particularly regarding greetings, as in “bade farewell”, but uninflected '''bid''' is significantly more common, and {{term||bidden}} is especially rare.<ref>“[http://grammarist.com/usage/bid-bade-bidden/ Bid, bade, bidden]”, ''Grammarist''</ref>
+The inflected forms {{m|en|bade}}, {{m|en|bad}}, and {{m|en|bidden}} are archaic. They remain in marginal use, particularly regarding greetings, as in “bade farewell”, but uninflected '''bid''' is significantly more common, and {{m|en||bidden}} is especially rare.<ref>“[http://grammarist.com/usage/bid-bade-bidden/ Bid, bade, bidden]”, ''Grammarist''</ref>
 
 When it does occur, it is usually in an elevated, ironical or metaphorical style e.g "I have '''bidden''' farewell to my prospects of promotion."
 
