--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -184,7 +184,7 @@ From {{etyl|ru|fi}}
 # [[vodka#English|vodka]]
 
 ====Declension====
-{{hu-decl-k-back|vodk|á}}{{hu-pos-tok|vodká}}
+{{hu-infl-nom|vodká|o}}{{hu-pos-tok|vodká}}
 
 [[Category:hu:Alcoholic beverages]]
 
