--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -118,6 +118,7 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 * Ukrainian: {{t+|uk|рекла́ма|f|sc=Cyrl}}, {{t+|uk|оголо́шення|n|sc=Cyrl}}, {{t+|uk|ано́нс|m|sc=Cyrl}}, {{t|uk|зая́ва|f|sc=Cyrl}}
 * Vietnamese: {{t+|vi|quảng cáo}} ({{t|vi|廣告|sc=Hani}}), {{t+|vi|giới thiệu}}
 * Volapük: {{t+|vo|noted}}, {{t+|vo|reklam}}, {{t+|vo|nunam}}
+* Võro: {{t|vro|reklaam }}
 * West Frisian: {{t|fy|advertinsje}}, {{t|fy|oankundiging}}
 * Yiddish: {{t|yi|רעקלאַמע|f|tr=reklame|sc=Hebr}}
 {{trans-bottom}}
