t+it:[[mulino]] ([[WT:EDIT|Assisted]]) <mill#40564953>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -180,6 +180,7 @@ From {{etyl|enm|en}} {{m|enm|mille}}, {{etyl|ang|en}} {{m|ang|mylen}}, from {{et
 {{trans-mid}}
 * Ido: {{t+|io|mueleyo}}
 * Irish: {{t|ga|muileann|m}}
+* Italian: {{t+|it|mulino|m}}
 * Korean: {{t+|ko|방앗간|sc=Kore}}
 * Latgalian: {{t|ltg|patmalis}}, {{t|ltg|dziernovys}}
 * Latvian: {{t+|lv|dzirnavas|f-p}}
