--- a/en/c/crabbit.720291.wikitext
+++ b/en/c/crabbit.720291.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{etyl|sco|en}} {{m|sco|crabbit}}, from {{term|crab}}.
+From {{der|en|sco|crabbit}}, from {{m|sco|crab}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈkɹabɪt/|lang=en}}
