rename basic-words categories per RFM using [[Project:AWB|AWB]] <then#40574692>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -307,7 +307,7 @@ From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{et
 {{en-adj|-}}
 
 # Being so at that time.
-#* '''2011''', Alessandra Lemma, ‎Mary Target, ‎Peter Fonagy, ''Brief Dynamic Interpersonal Therapy: A Clinician's Guide'' (page 124)
+#* '''2011''', Alessandra Lemma, Mary Target, Peter Fonagy, ''Brief Dynamic Interpersonal Therapy: A Clinician's Guide'', page 124:
 #*: He had met his '''then''' girlfriend when he had just started university. The relationship ended unhappily when the girlfriend complained that he never wanted to go out.
 
 ====Translations====
@@ -375,14 +375,12 @@ From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{et
 ===References===
 * {{R:OED2}}
 
-[[Category:100 English basic words]]
+[[Category:English basic words]]
 [[Category:English conjunctive adverbs]]
 [[Category:English demonstrative adverbs]]
 [[Category:English sequence adverbs]]
 [[Category:English temporal location adverbs]]
 [[Category:en:Time]]
-
-[[Category:1000 English basic words]]
 
 [[ar:then]]
 [[az:then]]
