/* Usage notes */rename basic-words categories per RFM using [[Project:AWB|AWB]] <again#40574910>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -254,10 +254,8 @@ From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|a
 ===Usage notes===
 The pronunciation /əˈɡeɪn/ is chiefly poetic.
 
-[[Category:200 English basic words]]
+[[Category:English basic words]]
 [[Category:English sequence adverbs]]
-
-[[Category:1000 English basic words]]
 
 ----
 
