--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -143,7 +143,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Basque: {{t+|eu|urde}}, {{t+|eu|zerri}}, {{t+|eu|txerri}}
 * Bau Bidayuh: {{t|sne|oyuo}}
 * Belarusian: {{t|be|свіння́|f}}
-* Bengali: {{t|bn|শুওর|tr=shuor|sc=Beng}}
+* Bengali: {{t|bn|শুওর|sc=Beng}}
 * Breton: {{t+|br|pemoc'h|m}}
 * Buginese: {{t|bug|bawi|sc=Bugi}}
 * Bulgarian: {{t+|bg|свиня́|f}}
@@ -187,7 +187,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 *: Ancient Greek: {{t|grc|ὗς}}
 * Hawaiian: {{t|haw|puaʻa}}
 * Hebrew: {{t+|he|חֲזִיר|m|tr=khazír}}
-* Hindi: {{t+|hi|सूअर|m|tr=sū'ar|sc=Deva}}
+* Hindi: {{t+|hi|सूअर|m|sc=Deva}}
 * Hungarian: {{t+|hu|sertés}}, {{t+|hu|disznó}}, {{t+|hu|malac}}
 * Iban: {{t|iba|jani}}, {{t|iba|babi}}
 * Icelandic: {{t+|is|svín|n}}
@@ -266,7 +266,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 *: Northern Sami: {{t|se|spiidni}}
 *: Skolt Sami: {{t|sms|šââ´ǩǩ}}
 * Samoan: {{t|sm|pua'a}}
-* Sanskrit: {{t+|sa|सूकर|tr=sūkara|sc=Deva}}
+* Sanskrit: {{t+|sa|सूकर|sc=Deva}}
 * Sardinian: {{t|sc|porcu}}, {{t|sc|polcu|m}}, {{t|sc|procu|m}}, {{t|sc|mannale}}, {{t|sc|mannali}}
 *: Campidanese: {{t|sc|procu|m}}, {{t|sc|mannali|m}}, {{t|sc|sue|f}}
 * Scottish Gaelic: {{t|gd|muc|f}}
@@ -293,7 +293,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Taos: {{t|twf|kùci’ína}}
 * Tatar: {{t+|tt|дуңгыз}}, {{t+|tt|чучка}}
 * Telugu: {{t+|te|పంది}}, {{t+|te|సూకరము|m}}
-* Thai: {{t+|th|หมู|tr=mŏo|sc=Thai}}
+* Thai: {{t+|th|หมู|sc=Thai}}
 * Tibetan: {{t|bo|ཕག་པ|sc=Tibt}}
 * Timugon Murut: {{t|tih|bawi}}
 * Tocharian B: {{t|txb|suwo}}
