--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -188,7 +188,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 [[Category:English ergative verbs]]
 [[Category:English irregular verbs]]
 [[Category:en:Bodily fluids]]
-[[Category:1000 English basic words]]
+[[Category:English basic words]]
 
 ----
 
