--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -65,8 +65,8 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Bashkir: {{t|ba|ҡуян|sc=Cyrl}}
 * Basque: {{t+|eu|untxi}}
 * Bau Bidayuh: {{t|sne|biruog brana}}
-* Belarusian: {{t|be|трус|m|tr=trus}}, {{t|be|кролік|m|tr=królik|sc=Cyrl}} <!-- [[трусяня]] {{n}} [[трусяне]] {{p}} means baby rabbit(s) -->
-* Bengali: {{t|bn|খরগোশ|tr=khôrgosh|sc=Beng}}, {{t|bn|শশ|tr=shasha|sc=Beng}}
+* Belarusian: {{t|be|трус|m}}, {{t|be|кро́лік|m|sc=Cyrl}} <!-- [[трусяня]] {{n}} [[трусяне]] {{p}} means baby rabbit(s) -->
+* Bengali: {{t|bn|খরগোশ|sc=Beng}}, {{t|bn|শশ|sc=Beng}}
 * Blackfoot: {{t|bla|aahtsista}}
 * Breton: {{t|br|lapin|m}}, {{t+|br|konikl|m}}
 * Bulgarian: {{t+|bg|заек|m}}
@@ -74,7 +74,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Catalan: {{t+|ca|conill|m}}
 * Central Melanau: {{t|mel|tikuih belada}}, {{t|mel|belabau belada}}
 * Chechen: {{t|ce|пхьагал}}
-* Cherokee: {{t|chr|ᏥᏍᏚ|tr=tsisdu}}
+* Cherokee: {{t|chr|ᏥᏍᏚ}}
 * Chickasaw: {{t|cic|chokfi}}
 * Chinese:
 *: Cantonese: {{t|yue|兔仔|tr=tou3 zai2|sc=Hani}}, {{t|yue|白兔|tr=baak6 tou3|sc=Hani}} {{qualifier|white rabbit}}
@@ -103,7 +103,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 *: Ancient: {{t|grc|κούνικλος|m}}
 * Gujarati: {{t|gu|સસલું|tr=sasluṃ}}
 * Hebrew: {{t+|he|אַרְנָב|m|tr=arnáv}}, {{t+|he|אַרְנֶבֶת|f|tr=arnévet}}
-* Hindi: {{t|hi|ख़रगोश|m|tr=xargoś|sc=Deva}}, {{t+|hi|शशक|m|tr=śaśak|sc=Deva}}, {{t|hi|सुस्सा|tr=sussA|sc=Deva}}, {{t+|hi|खरहा|tr=kharhaa|sc=Deva}}
+* Hindi: {{t|hi|ख़रगोश|m|sc=Deva}}, {{t+|hi|शशक|m|sc=Deva}}, {{t|hi|सुस्सा|tr=sussA|sc=Deva}}, {{t+|hi|खरहा|tr=kharhaa|sc=Deva}}
 * Hopi: {{t|hop|taavo}}
 * Hungarian: {{t+|hu|nyúl}}
 * Icelandic: {{t+|is|kanína}}
@@ -114,8 +114,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Inuktitut: {{t|iu|ᐅᑲᓕᐊᑦᓯᐊᖅ|sc=Cans}}
 * Irish: {{t+|ga|coinín|m}}
 * Italian: {{t+|it|coniglio|m}}
-* Japanese: {{t+|ja|兎|tr=[[うさぎ]], usagi|sc=Jpan}}, {{t|ja|ウサギ|tr=usagi|sc=Jpan}}
-* Norman: {{t|nrf|lapîn|m}}
+* Japanese: {{t+|ja|兎|tr=うさぎ, usagi|sc=Jpan}}, {{t|ja|ウサギ|tr=usagi|sc=Jpan}}
 * Kala Lagaw Ya: {{t-needed|mwp}}}
 * Kannada: {{t+|kn|ಮೊಲ|sc=Knda}}
 * Kazakh: {{t|kk|ор қоян|sc=Cyrl}}, {{t|kk|үй қояны|sc=Cyrl}}, {{t|kk|қоян|sc=Cyrl}}
@@ -131,16 +130,15 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Lao: {{t+|lo|ກະຕ່າຍ|sc=Laoo}}
 * Latgalian: {{t|ltg|truss}}
 * Latin: {{t+|la|cunīculus|m}}
-* Latvian: {{t|lv|trusis}}
-* Lithuanian: {{t+|lt|triušis}}
+* Latvian: {{t|lv|trusis|m}}
+* Lithuanian: {{t+|lt|triušis|m}}
 * Lojban: {{t+|jbo|ractu}}
 {{trans-mid}}
 * Low German: {{t|nds|Kanink|m|n}}, {{t|nds|Kaninken|m|n}}
 * Luxembourgish: {{t|lb|Kanéngchen|f}}
 * Lü: {{t|khb|ᦂᦎᦻᧈ|sc=Talu}}
 * Macedonian: {{t|mk|заjак|m}}
-* Malay:
-*: Rumi: {{t+|ms|arnab}}, {{t|ms|kelinci}}, {{t|ms|kucing belanda}}, {{t|ms|kuilu}}, {{t|ms|terwelu}}
+* Malay: {{t+|ms|arnab}}, {{t|ms|kelinci}}, {{t|ms|kucing belanda}}, {{t|ms|kuilu}}, {{t|ms|terwelu}}
 *: Jawi: {{t|ms|ارنب|sc=Arab}}, {{t|ms|کلينچي|sc=Arab}}, {{t|ms|کوچيڠ بلندا|sc=Arab}}, {{t|ms|کويلو|sc=Arab}}, {{t|ms|ترويلو|sc=Arab}}
 * Malayalam: {{t|ml|മുയല്‍}}
 * Maltese: {{t|mt|fenek|m}}
@@ -154,6 +152,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Montagnais: {{t|moe|uapush}}
 * Nahuatl: {{t+|nah|tochtli}}
 * Navajo: {{t|nv|gah}}
+* Norman: {{t|nrf|lapîn|m}}
 * Northern Sami: {{t|se|kaniidna}}
 * Northern Thai: {{t-needed|nod}}
 * Norwegian: {{t+|no|kanin|m}}
@@ -170,7 +169,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Romanian: {{t+|ro|iepure}}, {{t|ro|iepure de vizuină}}
 * Romansch: {{t|rm|cunigl}}
 * Russian: {{t+|ru|кро́лик|m}}, {{t+|ru|крольчи́ха|f}}
-* Sanskrit: {{t+|sa|शशक|tr=śaśaka|sc=Deva}}
+* Sanskrit: {{t+|sa|शशक|sc=Deva}}
 * Sardinian: {{t|scn|cunillu}}, {{t|scn|cacciappu}}
 * Scots: {{t|sco|kinnen}}
 * Scottish Gaelic: {{t|gd|coineanach|m}}, {{t|gd|rabaid|m}}
@@ -196,7 +195,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Taos: {{t|twf|pȉwéna}}
 * Tatar: {{t|tt|йорт куяны|sc=Cyrl}}, {{t+|tt|куян|sc=Cyrl}}
 * Telugu: {{t+|te|కుందేలు}}
-* Thai: {{t+|th|กระต่าย|tr=kratàai}}
+* Thai: {{t+|th|กระต่าย}}
 * Tibetan: {{t|bo|ཡོས|sc=Tibt}}
 * Torres Strait Creole: {{t-needed|tcs}}
 * Tswana: {{t|tn|mmutla}}
