--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -203,7 +203,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Turkmen: {{t|tk|towşan}}
 * Tz'utujil: {{t|tzj|umul}}
 * Tzotzil: {{t|tzo|t'ul}}
-* Ukrainian: {{t|uk|кріль|m}}, {{t+|uk|кролик|m|tr=królyk}}
+* Ukrainian: {{t|uk|кріль|m}}, {{t+|uk|кро́лик|m}}
 * Urdu: {{t|ur|خرگوش|m|tr=xargoś|sc=ur-Arab}}, {{t|ur|ششک|m|tr=śaśak|sc=ur-Arab}}
 * Uzbek: {{t+|uz|quyon}}, {{t+|uz|xargo'sh}}
 * Venetian: {{t|vec|cunicio|m}}
