--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -103,7 +103,8 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 # {{lb|en|obsolete}} The [[top]], [[summit]], especially of a hill.
 #* Drayton
 #*: '''Cop''' they used to call / The tops of many hills.
-# {{lb|en|obsolete}} The [[head]].
+# {{lb|en|obsolete}} The [[crown]] (of the head); also the [[head]] itself. {{defdate|14th-15th c.}}
+#: {{ux|en|The stature is bowed down in age, the '''cop''' is depressed.}}
 # A [[tube]] or [[quill]] upon which [[silk]] is wound.
 # {{lb|en|architecture|military}} A [[merlon]].
 
