--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -4,7 +4,7 @@
 
 ===Han character===
 {{Han char|rn=74|rad=月|as=00|sn=4|four=77220|canj=B|ids=⿵冂二}}
-
+#{{mul-kangxi radical-def}}
 ====Usage notes====
 Do not confuse {{lang|mul|月}} with {{m|mul|⺼|sc=Hani}}, a form of {{m|mul|肉||flesh, meat}} when used as the left-hand radical of a character. {{m|mul|⺼|sc=Hani}} is used for parts of the body such as {{m|mul|背||back}} or {{m|mul|肝||liver}}. These may be written identically as {{lang|mul|月}}, but in careful use they are distinguished, with the inside of {{lang|mul|⺼|sc=Hani}} being written with unattached diagonal strokes. This is particularly an issue in looking up characters by radical; compare the [[Index:Chinese radical/月|月 index]] and [[Index:Chinese radical/肉|肉 index]].
 
