--- a/en/m/miss out.802552.wikitext
+++ b/en/m/miss out.802552.wikitext
@@ -1,4 +1,4 @@
-{{also|miss off|missout}}
+{{also|missout}}
 ==English==
 
 ===Verb===
@@ -35,6 +35,9 @@
 * Spanish: {{t-needed|es}}
 * Swedish: {{t+|sv|missa}}
 {{trans-bottom}}
+
+===See also===
+* {{l|en|miss off}}
 
 [[Category:English phrasal verbs]]
 [[Category:English phrasal verbs with particle (out)]]
