t+ga:[[ainfhéichiúnta]] ([[WT:EDIT|Assisted]]) <unpunctual#40945018>

--- a/en/u/unpunctual.802727.wikitext
+++ b/en/u/unpunctual.802727.wikitext
@@ -16,7 +16,7 @@ From {{affix|en|un-|punctual}}.
 ====Translations====
 {{trans-top|not punctual}}
 * Finnish: {{t|fi|epätäsmällinen}}
-* Irish: {{t|ga|míphoncúil}}
+* Irish: {{t|ga|míphoncúil}}, {{t|ga|ainfhéichiúnta}}
 {{trans-mid}}
 * Spanish: {{t+|es|impuntual}}
 {{trans-bottom}}
