--- a/en/u/unpunctual.802727.wikitext
+++ b/en/u/unpunctual.802727.wikitext
@@ -7,7 +7,7 @@ From {{affix|en|un-|punctual}}.
 {{en-adj|-}}
 
 # Not [[punctual]].
-#: ''Jim was so '''unpunctual'''; always late!''
+#: ''Jim was so '''unpunctual''' &mdash; always late!''
 
 ====Derived terms====
 * {{l|en|unpunctually}}
