/* Translations */ BA <subtraction#40959211>

--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -19,6 +19,7 @@ From {{etyl|LL|en}} {{m|la|subtractio}}.
 ====Translations====
 {{trans-top|process}}
 * Armenian: {{t+|hy|հանում}}
+* Bashkir: {{t|ba|алыу|sc=Cyrl}}
 * Catalan: {{t|ca|sostracció|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|減法|sc=Hani}}, {{t+|cmn|减法|tr=jiǎnfǎ|sc=Hani}}
@@ -54,6 +55,7 @@ From {{etyl|LL|en}} {{m|la|subtractio}}.
 
 {{trans-top|calculation}}
 * Armenian: {{t+|hy|հանում}}
+* Bashkir: {{t|ba|алыу|sc=Cyrl}}
 * Catalan: {{t|ca|subtracció|f}}
 * Dutch: {{t+|nl|aftrekking|f}}
 * Esperanto: {{t|eo|subtraho}}
