/* Translations */ BA <division#40959214>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -65,6 +65,7 @@ From {{etyl|fro|en}} {{m|fro|division}}, from {{etyl|la|en}} {{m|la|divisio}}, n
 * Albanian: {{t+|sq|ndarje}}
 * Armenian: {{t+|hy|բաժանում}}
 * Aromanian: {{t|rup|mpãrtãciuni|f}}
+* Bashkir: {{t|ba|бүлеү|sc=Cyrl}}
 * Bulgarian: {{t+|bg|делене|n}}, {{t+|bg|разделяне|n}}
 * Czech: {{t+|cs|dělení|n}}
 * Dutch: {{t+|nl|deling|f}}, {{t+|nl|verdeling|f}}, {{t+|nl|scheiding|f}}
@@ -131,6 +132,7 @@ From {{etyl|fro|en}} {{m|fro|division}}, from {{etyl|la|en}} {{m|la|divisio}}, n
 {{trans-top|arithmetic: process of dividing a number by another}}
 * Afrikaans: {{t|af|deel}}
 * Armenian: {{t+|hy|բաժանում}}
+* Bashkir: {{t|ba|бүлеү|sc=Cyrl}}
 * Bulgarian: {{t+|bg|деление|n}}
 * Czech: {{t+|cs|dělení|n}}
 * Dutch: {{t+|nl|deling|f}}, {{t+|nl|delen|n}}
@@ -170,6 +172,7 @@ From {{etyl|fro|en}} {{m|fro|division}}, from {{etyl|la|en}} {{m|la|divisio}}, n
 {{trans-top|arithmetic: calculation involving this process}}
 * Afrikaans: {{t|af|deel}}
 * Armenian: {{t+|hy|բաժանում}}
+* Bashkir: {{t|ba|бүлеү|sc=Cyrl}}
 * Bulgarian: {{t+|bg|деление|n}}
 * Czech: {{t+|cs|dělení|n}}
 * Dutch: {{t+|nl|deling|f}}, {{t+|nl|staartdeling|f}}
