--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -14,7 +14,7 @@ From {{etyl|frm|en}} {{m|frm|pole||hen}} + {{m|en|cat}}. So named because of its
 # A [[weasel]]-like animal of the genus ''[[Mustela]]''
 ## notably, the [[European polecat]], ''[[Mustela putorius]]''.
 #* '''1919,''' {{w|Ronald Firbank}}, ''{{w|Valmouth}}'', Duckworth, hardback edition, page 61
-#*: By the little garden pergola open to the winds some fluttered peacocks were blotted nervelessly amid the dripping trees, their heads sunk back beneath their wings: while in the pergoda itself, like a fallen storm-cloud, lolled a negress, her levelled, '''polecat''' eyes semi-veiled by the nebulous alchemy of the rainbow.
+#*: By the little garden pergola open to the winds some fluttered peacocks were blotted nervelessly amid the dripping trees, their heads sunk back beneath their wings: while in the pergola itself, like a fallen storm-cloud, lolled a negress, her levelled, '''polecat''' eyes semi-veiled by the nebulous alchemy of the rainbow.
 # {{lb|en|US|dialect}} A [[skunk]].
 
 ====Synonyms====
