/* English */ +en:Crime <inside job#41084377>

--- a/en/i/inside job.854992.wikitext
+++ b/en/i/inside job.854992.wikitext
@@ -16,6 +16,8 @@
 * Polish: {{t|pl|robota wewnętrzna|f}}, {{t|pl|inside job|m}} {{qualifier|chiefly in conspiracy theories}}
 {{trans-bottom}}
 
+[[Category:en:Crime]]
+
 ----
 
 ==Polish==
