--- a/en/m/multi.34076.wikitext
+++ b/en/m/multi.34076.wikitext
@@ -94,6 +94,9 @@ Shortened from {{m|hu|multinacionális}} {{m|hu|vállalat||multinational company
 ----
 ==Spanish==
 
+===Etymology===
+Shortening of {{l|es|multinacional}}
+
 ===Noun===
 {{es-noun|f}}
 
