t+yi:[[וואדקע]] t-balance ([[WT:EDIT|Assisted]]) <vodka#41127137>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -70,8 +70,8 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Korean: {{t+|ko|보드카|sc=Hang}}
 * Kyrgyz: {{t|ky|водка|sc=Cyrl}}
 * Lao: {{t|lo|ວອດກ້າ|sc=Laoo}}
-{{trans-mid}}
 * Latgalian: {{t|ltg|braņdīņs}}
+{{trans-mid}}
 * Latin: {{t|la|vodca|f}}
 * Latvian: {{t+|lv|degvīns|m}}, {{t+|lv|šņabis|m}}, {{t+|lv|vodka|f}}
 * Lithuanian: {{t|lt|degtinė|f}}, {{t|lt|vodka|f}}
@@ -118,7 +118,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Vietnamese: {{t+|vi|vodka}}, {{t|vi|vôtca}}, {{t|vi|rượu vôtca}}, {{t|vi|rượu vodka}}
 * Vilamovian: {{t|wym|branfȧjn|m}}
 * Yakut: {{t|sah|үрүҥ арыгы|sc=Cyrl}}
-* Yiddish: {{t|yi|מאַשקע|sc=Hebr}}
+* Yiddish: {{t|yi|מאַשקע|sc=Hebr}}, {{t|yi|וואדקע}}
 {{trans-bottom}}
 
 {{trans-top|serving}}
