t+la:[[putorius]] ([[WT:EDIT|Assisted]]) <polecat#41138986>

--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -59,7 +59,7 @@ From {{etyl|frm|en}} {{m|frm|pole||hen}} + {{m|en|cat}}. So named because of its
 * Japanese: {{t|ja|ケナガイタチ|tr=kenagaitachi|sc=Jpan}}, {{t|ja|ヨーロッパケナガイタチ|tr=Yōroppa kenagaitachi|sc=Jpan}}
 * Norman: {{t|nrf|putouais|m}}
 * Latgalian: {{t|ltg|saskys|m}}
-* Latin: {{t|la|mustella}}
+* Latin: {{t|la|mustella}}, {{t|la|putorius|m}}
 * Latvian: {{t|lv|sesks}}
 * Lithuanian: {{t+|lt|šeškas}}
 {{trans-mid}}
