--- a/en/c/clackers.775401.wikitext
+++ b/en/c/clackers.775401.wikitext
@@ -5,6 +5,10 @@
 
 # {{plural of|clacker|lang=en}}
 
+{{en-plural noun}}
+
+# A toy consisting of two plastic spheres suspended on string which, when swung up and down, banged against each other, making a [[clack]]ing sound
+
 ===Anagrams===
 * {{l|en|cacklers}}
 * {{l|en|crackles}}
