--- a/en/c/clackers.775401.wikitext
+++ b/en/c/clackers.775401.wikitext
@@ -9,6 +9,9 @@
 
 # A toy consisting of two plastic spheres suspended on string which, when swung up and down, banged against each other, making a [[clack]]ing sound
 
+====Synonyms====
+{{sense|toy}} : [[clacker balls]]
+
 ===Anagrams===
 * {{l|en|cacklers}}
 * {{l|en|crackles}}
