--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -197,7 +197,7 @@ Inflection of {{m|la|quis||who?, what?}}.
 * {{IPA|[kuã˥˥]|lang=nan}}
 
 ===Etymology===
-The suffix has been used since around the 17th and 18th century. It is most likely an early attempt at Romanizing the Min Nan for [[官]] (POJ: [[koaⁿ]]) ''official''. Since "[[hong]]" ([[行]]) merchants were technically officials of the lowest (9th) rank, the swas added to their names in honour of their positions in the [[w:Qing Dynasty|Qing]] government.
+The suffix has been used since around the 17th and 18th century. It is most likely an early attempt at Romanizing the Min Nan for [[官]] (POJ: [[koaⁿ]]) ''official''. Since "[[hong]]" ([[行]]) merchants were technically officials of the lowest (9th) rank, the suffix "qua" was added to their names in honour of their positions in the [[w:Qing Dynasty|Qing]] government.
 
 ===Suffix===
 {{head|nan|suffix|poj|koaⁿ|traditional and simplified|官}}
