/* Etymology 1 */fixed typo <rabbit#41157217>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -13,7 +13,7 @@
 * {{homophones|lang=en|rabbet}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{etyl|fr|-}} dialect {{m|frm|rabbotte}}, {{m|frm|rabouillet||baby rabbit}}), from {{etyl|wa|en}} {{m|wa|robète}}, diminutive of {{etyl|dum|en}} {{m|dum|robbe||rabbit; seal}} (compare {{cog|nl|rob||rabbit}}, {{m|nl|rob||seal}}), from Middle Low German {{m|gml|robbe||seal}} (compare dialectal Low German {{m|nds||Rubb}}, {{m|nds|Robb}}, German {{m|de|Robbe||seal}}), from {{m|gml|rubben||ro rub}}. More at {{l|en|rub}}.
+From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{etyl|fr|-}} dialect {{m|frm|rabbotte}}, {{m|frm|rabouillet||baby rabbit}}), from {{etyl|wa|en}} {{m|wa|robète}}, diminutive of {{etyl|dum|en}} {{m|dum|robbe||rabbit; seal}} (compare {{cog|nl|rob||rabbit}}, {{m|nl|rob||seal}}), from Middle Low German {{m|gml|robbe||seal}} (compare dialectal Low German {{m|nds||Rubb}}, {{m|nds|Robb}}, German {{m|de|Robbe||seal}}), from {{m|gml|rubben||to rub}}. More at {{l|en|rub}}.
 
 ====Noun====
 {{en-noun}}
