--- a/en/m/milkweed.720309.wikitext
+++ b/en/m/milkweed.720309.wikitext
@@ -10,14 +10,14 @@
 # Any of several [[plant]]s that have a milky [[sap]] and have [[pod]]s that split to release seeds with silky tufts.
 ## Principally of the genus ''[[Asclepias]]'' in order [[Gentianales]], family [[Apocynaceae]]
 ## Also of the genus ''[[Calotropis]]'' in order [[Gentianales]], family [[Apocynaceae]]
-## {{taxlink|Euphorbia peplus|species|noshow=1}} and {{taxlink|Euphorbia heterophylla|species|noshow=1}}, in order [[Malpighiales]].
+## {{taxlink|Euphorbia peplus|species|noshow=1|ver=161014}} and {{taxlink|Euphorbia heterophylla|species|noshow=1|ver=161014}}, in order [[Malpighiales]].
 # A [[monarch butterfly]].
 
 ====Synonyms====
 * {{l|en|silkweed}}
 
 ====Hyponyms====
-* {{sense|plants in genus ''Asclepias''}} {{vern|common milkweed|pedia=1}} ({{taxlink|Asclepias syriaca|species|noshow=1}}), {{vern|clasping milkweed|pedia=1}} ({{taxlink|Asclepias amplexicaulis|species|noshow=1}}), [[butterfly milkweed]] (''[[Asclepias tuberosa]]''), {{vern|fourleaf milkweed|pedia=1}} ({{taxlink|Asclepias quadrifolia|species|noshow=1}}), {{vern|green comet milkweed|pedia=1}} ({{taxlink|Asclepias viridiflora|species|noshow=1}}), {{vern|poke milkweed|pedia=1}} ({{taxlink|Asclepias exaltata|species|noshow=1}}), [[purple milkweed]] ({{taxlink|Asclepias purpurascens|species|noshow=1}}), {{vern|red milkweed|pedia=1}} ({{taxlink|Asclepias rubra|species|noshow=1}}), {{vern|redring milkweed|pedia=1}} ({{taxlink|Asclepias variegata|species|noshow=1}}), [[swamp milkweed]] (''[[Asclepias incarnata]]''), {{vern|whorled milkweed|pedia=1}} ({{taxlink|Asclepias verticillata|species|noshow=1}})
+* {{sense|plants in genus ''Asclepias''}} {{vern|common milkweed|pedia=1}} ({{taxlink|Asclepias syriaca|species|noshow=1|ver=161014}}), {{vern|clasping milkweed|pedia=1}} ({{taxlink|Asclepias amplexicaulis|species|noshow=1|ver=161014}}), [[butterfly milkweed]] (''[[Asclepias tuberosa]]''), {{vern|fourleaf milkweed|pedia=1}} ({{taxlink|Asclepias quadrifolia|species|noshow=1|ver=161014}}), {{vern|green comet milkweed|pedia=1}} ({{taxlink|Asclepias viridiflora|species|noshow=1|ver=161014}}), {{vern|poke milkweed|pedia=1}} ({{taxlink|Asclepias exaltata|species|noshow=1|ver=161014}}), [[purple milkweed]] ({{taxlink|Asclepias purpurascens|species|noshow=1|ver=161014}}), {{vern|red milkweed|pedia=1}} ({{taxlink|Asclepias rubra|species|noshow=1|ver=161014}}), {{vern|redring milkweed|pedia=1}} ({{taxlink|Asclepias variegata|species|noshow=1|ver=161014}}), [[swamp milkweed]] (''[[Asclepias incarnata]]''), {{vern|whorled milkweed|pedia=1}} ({{taxlink|Asclepias verticillata|species|noshow=1|ver=161014}})
 
 ====Translations====
 {{trans-top|a plant}}
