t+qu:[[upiy]] t-balance ([[WT:EDIT|Assisted]]) <sir#41158435>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -126,6 +126,7 @@ From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from 
 * Persian: {{t+|fa|آقا|tr=âqâ|sc=fa-Arab}}
 * Polish: {{t+|pl|pan|m}}, [[panie]] {{g|m}} ([[vocative case]])
 * Portuguese: {{t+|pt|senhor|m}}
+* Quechua: {{t|qu|upiy}}
 * Romanian: {{t+|ro|domn|m}}, ({{t|ro|domnule}}) (''vocative'')
 * Russian: {{qualifier|obsolete}} {{t+|ru|су́дарь|m}}, {{t+|ru|господи́н|m}}, {{t+|ru|сэр|m}} {{qualifier|in translations from English}}
 * Serbo-Croatian:
