--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -11,7 +11,7 @@
 
 ===Etymology 1===
 From {{etyl|enm|en}} {{m|enm|bageard||marked by a badge}}, from {{m|enm|bage||badge}}, referring to the animal's badge-like white blaze, equivalent to {{suffix|badge|ard|lang=en}}.
-
+{{wikipedia}}
 ====Noun====
 [[Image:Meles meles MHNT.jpg|thumb|A badger]]
 {{en-noun}}
@@ -144,7 +144,6 @@ From {{etyl|enm|en}} {{m|enm|bageard||marked by a badge}}, from {{m|enm|bage||ba
 * {{l|en|cete}}
 * {{l|en|meline}}
 * {{l|en|sett}}, {{l|en|set}}
-* {{projectlink|wikipedia}}
 * {{l|en|Appendix: Animals}}
 
 ====Verb====
