--- a/en/b/bykes.720311.wikitext
+++ b/en/b/bykes.720311.wikitext
@@ -1,3 +1,12 @@
+==English==
+
+===Noun===
+{{head|en|noun plural form|head=bykes}}
+
+# {{plural of|byke|lang=en}}
+
+----
+
 ==Scots==
 
 ===Noun===
