--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -4,10 +4,11 @@
 
 ====Pronunciation====
 * {{qualifier|stressed}} {{enPR|ăt}}, {{IPA|/æt/|lang=en}}
+** {{audio|en-us-at.ogg|Audio (US)|lang=en}}
+** {{rhymes|æt|lang=en}}
+** {{homophones|lang=en|@}}
 * {{qualifier|unstressed}} {{IPA|/ət/|lang=en}}
-* {{audio|en-us-at.ogg|Audio (US)|lang=en}}
-* {{rhymes|æt|lang=en}}
-* {{homophones|lang=en|@}}
+** {{homophones|lang=en|@|it}} {{qualifier|unstressed; only in some accents}}
 [[Category:English 1-syllable words]]
 
 ===Etymology 1===
