--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -8,7 +8,7 @@
 ** {{rhymes|æt|lang=en}}
 ** {{homophones|lang=en|@}}
 * {{qualifier|unstressed}} {{IPA|/ət/|lang=en}}
-** {{homophones|lang=en|@|it}} {{qualifier|unstressed; only in some accents}}
+** {{homophones|lang=en|it}} {{qualifier|unstressed; only in some accents}}
 [[Category:English 1-syllable words]]
 
 ===Etymology 1===
