/* Noun */ explain what it actually is. how about "an [[optical disc]] containing [[data]] that can be read (but not changed) by a [[computer]]" <CD-ROM#41169532>

--- a/en/c/CD-ROM.26226.wikitext
+++ b/en/c/CD-ROM.26226.wikitext
@@ -9,7 +9,7 @@
 ===Noun===
 {{en-noun|head=[[CD]]-[[ROM]]}}
 
-# [[compact disk]] - [[read only memory]].
+# [[compact disk]] - [[read only memory]]: an [[optical disc]] containing [[data]] that can be read (but not changed) by a [[computer]]
 
 ===See also===
 * {{projectlink|wikipedia}}
