--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -101,6 +101,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 *: Helgoland: {{t|frr|bin}}
 *: Mooring: {{t|frr|bine}}
 * Norwegian: {{t+|no|binde}}
+* Occitan: {{t+|oc|ligar}}
 * Old Dutch: {{t|odt|bindan}}
 * Old English: {{t|ang|bindan}}
 * Old Frisian: {{t|ofs|binda}}
