--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -7,6 +7,7 @@
 * {{a|US}} {{IPA|/bloʊ/|[bloʊ̯]|lang=en}}
 * {{audio|en-us-blow.ogg|Audio (US)|lang=en}}
 * {{rhymes|əʊ|lang=en}}
+[[Category:English 1-syllable words]]
 
 ===Etymology 1===
 From {{etyl|enm|en}} {{m|enm|blo}}, {{m|enm|bloo}}, from {{etyl|ang|en}} {{m|ang|blāw||blue}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*blēwaz||blue, dark blue, grey, black}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰlēw-||yellow, blond, grey}}. Cognate with {{cog|la|flavus||yellow}}. More at {{l|en|blue}}.
