--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -10,6 +10,8 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * {{audio|en-us-thing.ogg|Audio (US)|lang=en}}
 * {{rhymes|ɪŋ|lang=en}}
 
+[[Category:English 1-syllable words]]
+
 ===Noun===
 {{en-noun}}
 
