--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -11,6 +11,8 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * {{a|pin-pen}} {{IPA|/bɪnd/|lang=en}}
 * {{rhymes|ɛnd|lang=en}}
 
+[[Category:English 1-syllable words]]
+
 ===Verb===
 {{en-verb|bends|bending|bent|past2=bended|past2_qual=archaic}}
 
