+Czech attested in Volný (orig. Jackson) 2009, Zandl 2011, Šumová (orig. Stimson) 2013, Dvořáková 2014, Robovská (orig. Zander) 2015, Sklář 2015, Neff 2016; I report to have heard the term <mega#41180348>

--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -61,6 +61,18 @@ From the prefix {{m|en|mega-}}, from {{etyl|grc|en}} {{m|grc|μέγας||great, 
 
 ----
 
+==Czech==
+
+===Noun===
+{{cs-noun|g=n}}
+
+# {{lb|cs|informal}} [[million]]
+
+====Synonyms====
+* See also [[milión]]
+
+----
+
 ==Danish==
 
 ===Adverb===
