--- a/en/b/blew.6804.wikitext
+++ b/en/b/blew.6804.wikitext
@@ -5,6 +5,7 @@
 * {{audio|en-us-blew.ogg|Audio (US)|lang=en}}
 * {{rhymes|uː|lang=en}}
 * {{homophones|lang=en|blue}}
+[[Category:English 1-syllable words]]
 
 ===Verb===
 {{head|en|verb form}}
