--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -47,7 +47,7 @@ From medieval {{etyl|la|en}} {{m|la|Bosphorus}}, from {{etyl|grc|en}} {{m|grc|Β
 *: Mandarin: {{t+|cmn|博斯普魯斯海峽}}, {{t+|cmn|博斯普鲁斯海峡|tr=Bósīpǔlǔsī hǎixiá}}
 * Chuvash: {{t|cv|Босфор}}
 * Czech: {{t+|cs|Bospor|m}}
-* Danish: {{t|da|Bosporus}}
+* Danish: {{t|da|Bosporus}}, {{t|da|Bosporusstrædet|n}} {{qualifier|definite form}}
 * Dutch: {{t|nl|Bosporus}}
 * Esperanto: {{t|eo|Bosporo}}
 * Estonian: {{t|et|Bosporus}}
