--- a/en/o/oidium.746075.wikitext
+++ b/en/o/oidium.746075.wikitext
@@ -4,7 +4,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{etyl|LL.|en}}, from {{etyl|grc|en}} {{m|grc|ᾠόν||egg}}.
+From {{etyl|LL.|en}}, from {{etyl|grc|en}} {{m|grc|ᾠόν||egg}} {{suffix||ium|lang=en}}
 
 ===Noun===
 {{en-noun|oidia}}
