--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -65,7 +65,7 @@ See [[bind]]
 * French: {{t+|fr|obligé}}, {{t+|fr|tenu}}
 {{trans-mid}}
 * Italian: {{t+|it|obbligato|m}}, {{t+|it|confinato|m}}, {{t+|it|tenuto|m}}, {{t+|it|costretto}}, {{t+|it|portato}}
-* Occitan: {{t|oc|obligat}}
+* Occitan: {{t|oc|obligat}}, {{t|oc|tengut}}
 * Portuguese: {{t+|pt|obrigado}}
 * Romanian: {{t+|ro|obligat|m}}
 * Russian: {{t+|ru|обяза́нный}}, {{t+|ru|до́лжный}}
