--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -48,7 +48,7 @@ From {{etyl|enm|en}} {{m|enm|thaugh}}, {{m|enm|thagh|}}, from {{etyl|ang|en}} {{
 * Malay: {{t|ms|walau bagaimana}}
 * Navajo: {{t|nv|ndi}}
 * Norwegian: {{t+|no|dog}}
-* Occitan: {{t|oc|pasmens}}, {{t|oc|ni per tot}}, {{t|oc|ça que la}}, {{t|oc|pr'aquò}}
+* Occitan: {{t|oc|pasmens}}, {{t|oc|ni per tot}}, {{t|oc|ça que la}}, {{t|oc|pr'aquò}}, {{t|oc|pr'aquò}}
 * Persian: {{t+|fa|گرچه|tr=garče|sc=fa-Arab}}
 * Polish: {{t+|pl|jednak}}
 * Portuguese: no [[entanto]], {{t+|pt|não obstante}}
