--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -166,6 +166,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 *: Lower Sorbian: {{t|dsb|njewjericka|f}}
 *: Upper Sorbian: {{t+|hsb|wjewjerčka|f}}
 * Southern Altai: {{t|alt|тийиҥ}}
+* Southern Sami: {{t|sma|åeruve}}
 * Spanish: {{t+|es|ardilla|f}}
 * Sranan Tongo: {{t|srn|ekosi}}
 * Sundanese: {{t+|su|bajing}}
