t+qu:[[watai]] ([[WT:EDIT|Assisted]]) <bind#41223412>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -108,6 +108,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 * Old Norse: {{t|non|binda}}
 * Old Saxon: {{t|osx|bindan}}
 * Portuguese: {{t+|pt|amarrar}}
+* Quechua: {{t|qu|watai}}
 * Russian: {{t+|ru|свя́зывать|impf}}, {{t+|ru|свя́зать|pf}}
 * Saterland Frisian: {{t|stq|biende}}
 * Swedish: {{t+|sv|binda}}
