t+ko:[[{{t-needed}}]] t-balance t+vi:[[{{t-needed}}]] ([[WT:EDIT|Assisted]]) <Nintendo#41228059>

--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -43,11 +43,12 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * Finnish: {{t|fi|Nintendo}}
 * French: {{t+|fr|Nintendo|f}}
 * German: {{t|de|Nintendo|f}}
-{{trans-mid}}
 * Greek: {{t|el|Νιντενδω}}, {{t|el|Νιντενδο}}
 * Hebrew: {{t|he|נינטנדו}}
+{{trans-mid}}
 * Italian: {{t|it|Nintendo}}, {{t|it|Nintendo|f}}
 * Japanese: {{t|ja|任天堂|tr=Nintendō}}, {{t|ja|ニンテンドー|tr=Nintendō}}, {{t+|ja|ファミコン|tr=famikon}}
+* Korean: {{t-needed|ko}}
 * Latin: {{t|la|Nintendo}}, {{t|la|Nintendonis|cgenitive}}
 * Nepali: {{t|ne|निन्टेन्डो|sc=Deva}}
 * Persian: {{t+|fa|نینتندو|sc=fa-Arab}}
@@ -56,6 +57,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * Serbo-Croatian: {{t|sh|нинтендо}}
 * Spanish: {{t|es|Nintendo}}
 * Thai: {{t|th|นินเทนโด|tr=Ninthendo}}
+* Vietnamese: {{t-needed|vi}}
 {{trans-bottom}}
 
 [[fr:Nintendo]]
