--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -60,7 +60,7 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 #: ''This '''blows'''!''
 # {{lb|en|transitive|slang}} To recklessly [[squander]].
 #: ''I managed to '''blow''' $1000 at blackjack in under an hour.''
-#: ''The Warriors '''blew''' a 3-1 lead in the NBA Finals.''
+#: ''I '''blew''' $35 thou on a car.''
 #: ''We '''blew''' an opportunity to get benign corporate sponsorship.''
 # {{lb|en|transitive|vulgar}} To [[fellate]].
 #: ''Who did you have to '''blow''' to get those backstage passes?''
@@ -133,8 +133,6 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 * {{l|en|mind-blowing}}
 * {{l|en|there she blows}}
 {{rel-bottom}}
-
-Blow is also a Ke$ha song.
 
 =====Translations=====
 {{trans-top|to produce an air current}} <!--1-->
