--- a/en/c/compasses.741465.wikitext
+++ b/en/c/compasses.741465.wikitext
@@ -6,7 +6,7 @@
 
 # {{plural of|compass|lang=en}}
 
-[[Category:English plurals ending in "-ii"]]
+[[Category:English plurals ending in "-es"]]
 
 ----
 
