--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -91,8 +91,8 @@ Abbreviation of various terms and phrases.
 #* '''1993''' January 5, "Tierney Dhewitrei" (username), ''about me, is it familiar?'', in <tt>alt.transgendered</tt>, ''Usenet'':
 #*: By now I did not feel right without a bra and panties whenever I '''CD&apos;ed'''.
 
-===Particle===
-{{head|en|particle}}
+===Symbol===
+{{head|en|symbol}}
 
 # {{non-gloss definition|An abbreviation found on decals of automobiles, indicating that they are used by diplomats. From the French phrase {{m|fr|corps diplomatique||[[diplomatic]] [[corps]]}}.|lang=fr}}
 
