t+th:[[จำนำ]] ([[WT:EDIT|Assisted]]) <pledge#41323803>

--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -146,6 +146,7 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 * Russian: {{t+|ru|зало́г|m}}
 * Spanish: {{t+|es|garantía|f}}
 * Telugu: {{t+|te|తనఖా|tr=tanakhaa|sc=Telu}}
+* Thai: {{t+|th|จำนำ}}
 {{trans-bottom}}
 
 {{trans-top|person who has taken a pledge of allegiance to a fraternity}}
