--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -14,7 +14,7 @@
 * {{hyphenation|a|gain|lang=en}}
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, from {{etyl|ang|en}} {{m|ang|āġēan}}, {{m|ang|onġēan}}, {{m|ang|onġeġn||towards, against, opposite to, contrary to, against, in exchange for, opposite, back, again, anew, also}}, equivalent to {{prefix|a|gain|t2=against|lang=en}}. Cognate with {{cog|da|igen||again}}, {{cog|sv|igen||again}}.
+From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, from {{etyl|ang|en}} {{m|ang|āġēan}}, {{m|ang|onġēan}}, {{m|ang|onġeġn||towards, against, opposite to, contrary to, against, in exchange for, opposite, back, again, anew, also}}, equivalent to {{prefix|a|gain|t2=against|lang=en}}. Cognate with {{cog|da|igen||again}}, {{cog|sv|igen||again}}, and {{cog|no|igjen||again}}
 
 ===Adverb===
 {{en-adv|-}}
