t+ga:[[airleog]] ([[WT:EDIT|Assisted]]) <bound#41340779>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -204,7 +204,7 @@ From {{etyl|fr|en}} {{m|fr|bondir||to leap, bound, originally make a loud resoun
 * German: {{t+|de|Sprung|m}}
 * Greek: {{t+|el|άλμα|n}}
 {{trans-mid}}
-* Irish: {{t|ga|preab|f}}
+* Irish: {{t|ga|preab|f}}, {{t|ga|airleog|f}}
 * Italian: {{t+|it|salto|m}}, {{t+|it|balzo|m}}
 * Portuguese: {{t+|pt|salto|m}}
 * Russian: {{t+|ru|прыжо́к|m}}, {{t+|ru|скачо́к|m}}
