--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -1,6 +1,6 @@
 ==English==
 {{wikipedia}}
-[[Image:Ilder.jpg|thumb|Ferrets (Mustela putorius)]]
+[[Image:Ilder.jpg|thumb|'''ferrets''' (''[[Mustela putorius]]'']]
 
 ===Pronunciation===
 * {{enPR|fĕr'ət}}, {{IPA|/ˈfɛrɪt/|lang=en}}
