--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -1,6 +1,6 @@
 ==English==
 {{wikipedia}}
-[[Image:Ilder.jpg|thumb|'''ferrets''' (''[[Mustela putorius]]'')]]
+[[Image:Ilder.jpg|thumb|'''ferrets''' (''[[Mustela putorius furo]]'')]]
 
 ===Pronunciation===
 * {{enPR|fĕr'ət}}, {{IPA|/ˈfɛrɪt/|lang=en}}
@@ -14,14 +14,11 @@
 ====Noun====
 {{en-noun}}
 
-# An often domesticated [[mammal]] rather like a [[weasel]], descended from the [[polecat]] and often trained to [[hunt]] [[burrow]]ing animals.
+# An often domesticated [[mammal]] (''[[Mustela putorius furo]]'') rather like a [[weasel]], descended from the [[polecat]] and often trained to [[hunt]] [[burrow]]ing animals.
 # The {{vern|black-footed ferret}}, {{taxlink|Mustela nigripes|species|noshow=1|ver=161101}}.
 # A [[diligent]] [[searcher]].
 #* '''1998''' July 2, [[w:Charles Nicholl|Charles Nicholl]], "Screaming in the Castle" in the ''London Review of Books'', Vol. XX, No. 13:
-#*: The most challenging documentary discoveries were made by a tenacious archival [[ferret]], Dr Antonio Bertoletti. In 1879 he published his findings in a slim, refreshingly dry volume, ''[[w:Beatrice Cenci|Francesco Cenci]] e la sua Famiglia''. 
-
-=====Synonyms=====
-* {{sense|domesticated polecat}} ''[[Mustela putorius furo]]''
+#*: The most challenging documentary discoveries were made by a tenacious archival [[ferret]], Dr Antonio Bertoletti. In 1879 he published his findings in a slim, refreshingly dry volume, ''[[w:Beatrice Cenci|Francesco Cenci]] e la sua Famiglia''.
 
 =====Translations=====
 {{trans-top|the mammal ''Mustela putorius furo''}}
