--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -40,6 +40,7 @@ From {{etyl|sa|ms}} {{m|sa|भाषा||language|tr=bhāṣā}}.
 
 ====Derived terms====
 * {{l|ms|bahasa Melayu}}
+* {{l|ms|jurubahasa|interpreter}}
 
 [[Category:ms:Language]]
 
