Fixing [[Category:English terms with redundant head parameter|redundant head parameter]]. <1 gauge#41368186>

--- a/en/1/1 gauge.855487.wikitext
+++ b/en/1/1 gauge.855487.wikitext
@@ -2,7 +2,7 @@
 
 ===Noun===
 {{wikipedia}}
-{{en-noun|head=[[1]] [[gauge]]|-}}
+{{en-noun|-}}
 
 # A [[model]] [[railway]] [[gauge]] of 1.75 inches (44.45 mm).
 
