--- a/en/a/a life of its own.803367.wikitext
+++ b/en/a/a life of its own.803367.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-{{en-noun|head=[[a]] [[life]] [[of]] [[its]] [[own]]|lives of their own}}
+{{en-noun|lives of their own}}
 
 # {{lb|en|idiomatic}} An independent existence with some characteristics of life.
 #* '''1996''', George Steiner, ''Tolstoy or Dostoevsky: An Essay in the Old Criticism'', page 181
