--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -16,7 +16,7 @@ From {{etyl|enm|en}} {{m|enm|bageard||marked by a badge}}, from {{m|enm|bage||ba
 [[Image:Meles meles MHNT.jpg|thumb|A badger]]
 {{en-noun}}
 
-# A common name for any [[mammal]] of three subfamilies, which belong to the family [[Mustelidae]]: [[Melinae]] (Eurasian badgers), [[Mellivorinae]] ([[ratel]] or [[honey badger]]), and ''{{taxlink|Taxideinae|subfamily|noshow=1}}'' ([[American badger]]).
+# A common name for any [[mammal]] of three subfamilies, which belong to the family [[Mustelidae]]: [[Melinae]] (Eurasian badgers), [[Mellivorinae]] ([[ratel]] or [[honey badger]]), and ''{{taxlink|Taxideinae|subfamily|noshow=1|ver=161103}}'' ([[American badger]]).
 # A [[native]] or [[resident]] of the American state, [[Wisconsin]].
 # {{lb|en|obsolete}} A brush made of badger hair.
 # {{lb|en|in the plural|obsolete|vulgar|cant}} A crew of desperate [[villain]]s who robbed near rivers, into which they threw the bodies of those they murdered.
