t+ga:[[bambú]] t+cy:[[bambŵ]] ([[WT:EDIT|Assisted]]) <bamboo#41370245>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -63,6 +63,7 @@
 * Hungarian: {{t+|hu|bambusz}}
 * Icelandic: {{t|is|bambus|m}}
 * Indonesian: {{t+|id|buluh}}, {{t+|id|bambu}}, {{t+|id|aur}}
+* Irish: {{t|ga|bambú|m}}
 * Isan: {{t-needed|tts}}
 * Italian: {{t+|it|bambù|m}}
 * Japanese: {{t+|ja|竹|tr=たけ, take|sc=Jpan}}
@@ -115,6 +116,7 @@
 * Vietnamese: {{t+|vi|tre}}, {{t+|vi|trúc}}
 * Volapük: {{t+|vo|bambud}}, {{qualifier|obsolete}} {{t|vo|lerid}}
 * Waray-Waray: {{t|war|kawayan}}
+* Welsh: {{t|cy|bambŵ|m}}
 * Zhuang: {{t-needed|za}}
 {{trans-bottom}}
 
@@ -133,6 +135,7 @@
 * German: {{t+|de|Bambus|m}}, {{t+|de|Bambusrohr|n}}
 * Hawaiian: {{t|haw|ʻohe}}
 * Hebrew: {{t+|he|במבוק|m|tr=bambuq}}, {{t|he|חִזְרָן|m|tr=khizran}}
+* Irish: {{t|ga|bambú|m}}
 * Italian: {{t+|it|bambù|m}}
 {{trans-mid}}
 * Japanese: {{t+|ja|竹|tr=[[たけ]], take|sc=Jpan}}, {{t|ja|竹材|tr=たけざい, takezai|sc=Jpan}}
@@ -149,6 +152,7 @@
 * Tagalog: {{t|tl|kawayan}}
 * Thai: {{t+|th|ไม้ไผ่|tr=máai pài|sc=Thai}}
 * Tok Pisin: {{t|tpi|mambu}}
+* Welsh: {{t|cy|bambŵ|m}}
 {{trans-bottom}}
 
 {{checktrans-top}}
