--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -93,6 +93,7 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 # {{lb|en|obsolete}} To talk loudly; to boast; to storm.
 #* Bartlett
 #*: You '''blow''' behind my back, but dare not say anything to my face.
+# {{lb|en|slang|informal|AAVE}} To [[sing]]
 
 =====Derived terms=====
 {{rel-top|Terms derived from ''blow'' (verb)}}
