--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -94,6 +94,7 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 #* Bartlett
 #*: You '''blow''' behind my back, but dare not say anything to my face.
 # {{lb|en|slang|informal|AAVE}} To [[sing]]
+#: ''That girl has a wonderful voice; she can really '''blow'''!''
 
 =====Derived terms=====
 {{rel-top|Terms derived from ''blow'' (verb)}}
