--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -80,8 +80,8 @@ From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from 
 * Armenian: {{t+|hy|պարոն}}
 * Azeri: {{t+|az|cənab}}
 * Baluchi: {{t|bal|واجہ|tr=wája}}
-* Belarusian: {{t|be|спада́р|m|tr=spadár}}, {{t|be|пан|m}}
-* Bengali: {{t|bn|জনাব|tr=jônab|sc=Beng}}
+* Belarusian: {{t|be|спада́р|m}}, {{t|be|пан|m}}
+* Bengali: {{t|bn|জনাব|sc=Beng}}
 * Bulgarian: {{t+|bg|господи́н|m}}
 * Burmese: {{t+|my|ဦး|sc=Mymr}}
 * Chinese:
@@ -103,7 +103,7 @@ From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from 
 * Icelandic: {{t+|is|herra|m}}
 * Indonesian: {{t+|id|tuan}}
 * Italian: {{t+|it|signore|m}}
-* Japanese: {{t|ja|だんな|tr=danna}}, {{t|ja|サー|tr=sā}} {{qualifier|in translations from English}}, {{t|ja|だんな様|tr=danna-sama|sc=Jpan}}
+* Japanese: {{t|ja|だんな|tr=danna}}, {{t|ja|サー|tr=sā}} {{qualifier|in translations from English}}, {{t|ja|だんな様|tr=だんなさま, danna-sama|sc=Jpan}}
 * Kazakh: {{t+|kk|мырза|sc=Cyrl}}
 * Khmer: {{t|km|ភោ|tr=pʰou|sc=Khmr}}
 * Korean: {{t+|ko|선생님|sc=Hang}}, {{t+|ko|씨|alt=-씨|sc=Kore}}
@@ -124,7 +124,7 @@ From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from 
 * Norwegian:
 *: Bokmål: {{t+|nb|herre|m}}
 * Persian: {{t+|fa|آقا|tr=âqâ|sc=fa-Arab}}
-* Polish: {{t+|pl|pan|m}}, [[panie]] {{g|m}} ([[vocative case]])
+* Polish: {{t+|pl|pan|m}}, {{t|pl|panie|m}} ([[vocative case]])
 * Portuguese: {{t+|pt|senhor|m}}
 * Quechua: {{t|qu|upiy}}
 * Romanian: {{t+|ro|domn|m}}, ({{t|ro|domnule}}) (''vocative'')
@@ -132,12 +132,12 @@ From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from 
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|господин|m}}
 *: Roman: {{t+|sh|gospodin|m}}
-* Slovak: {{t|sk|pán|m}}
+* Slovak: {{t|sk|pán|m}}, {{t|sk|pane|m}} ([[vocative case]])
 * Slovene: {{t+|sl|gospod|m}}
 * Spanish: {{t+|es|señor|m}}
 * Swedish: {{t+|sv|herr|c}}, {{t+|sv|herre|c}}
 * Tajik: {{t+|tg|ҷаноб}}
-* Thai: {{t+|th|ท่าน|tr=tâan|sc=Thai}}, {{t|th|เสอร์|tr=sĕr|sc=Thai}}
+* Thai: {{t+|th|ท่าน|sc=Thai}}, {{t|th|เสอร์|sc=Thai}}
 * Turkish: {{t+|tr|beyefendi}}, {{t+|tr|efendi}}
 * Turkmen: {{t+|tk|jenap}}
 * Ukrainian: {{t|uk|пан|m}}
@@ -152,7 +152,6 @@ From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from 
 * French: {{t+|fr|seigneur|m}}
 * Italian: {{t-check|it|signore|m}}
 {{trans-mid}}
-* {{ttbc|sk}}: [[pán]] {{g|m}}, [[pane]] ''m vocative''
 * Spanish: {{t-check|es|señor|m}}
 {{trans-bottom}}
 
