t+lt:[[pone]] t-balance t+tg:[[оғо]] t+uz:[[agʻa]] t+az:[[ağa]] t+tr:[[ağa]] ([[WT:EDIT|Assisted]]) <sir#41463683>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -78,7 +78,7 @@ From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from 
 * Albanian: {{t+|sq|zotëri|m}}
 * Arabic: {{t+|ar|أُسْتَاذ|m}}, {{t|ar|سَيِّد|m}}, {{t|ar|سَيِّدِي|m}}, {{t|ar|حَضْرَتَك|m}}, {{t|ar|أَفَنْدِي|m}}, {{t|ar|بَاشَا|m}}
 * Armenian: {{t+|hy|պարոն}}
-* Azeri: {{t+|az|cənab}}
+* Azeri: {{t+|az|cənab}}, {{t+|az|ağa}}
 * Baluchi: {{t|bal|واجہ|tr=wája}}
 * Belarusian: {{t|be|спада́р|m}}, {{t|be|пан|m}}
 * Bengali: {{t|bn|জনাব|sc=Beng}}
@@ -107,14 +107,14 @@ From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from 
 * Kazakh: {{t+|kk|мырза|sc=Cyrl}}
 * Khmer: {{t|km|ភោ|tr=pʰou|sc=Khmr}}
 * Korean: {{t+|ko|선생님|sc=Hang}}, {{t+|ko|씨|alt=-씨|sc=Kore}}
-{{trans-mid}}
 * Kurdish:
 *: Sorani: {{t+|ku|کاک}}
+{{trans-mid}}
 * Kyrgyz: {{t+|ky|господин|sc=Cyrl}}, {{t|ky|мырза|sc=Cyrl}}
 * Lao: {{t|lo|ທ່ານ|sc=Laoo}}, {{t|lo|ທ່ານເອີຽ|sc=Laoo}}
 * Latin: {{t+|la|dominus|m}}, [[domine]] {{g|m}} ([[vocative case]])
 * Latvian: {{t|lv|kungs|m}}
-* Lithuanian: {{t|lt|ponas|m}}
+* Lithuanian: {{t|lt|ponas|m}}, {{t|lt|pone|m}} {{qualifier|vocative}}
 * Macedonian: {{t|mk|го́сподин|m}}, {{t|mk|госпо́дине|m}} ([[vocative case]])
 * Malay: {{t|ms|tuan}}
 * Maori: {{t|mi|tā}}
@@ -136,13 +136,13 @@ From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from 
 * Slovene: {{t+|sl|gospod|m}}
 * Spanish: {{t+|es|señor|m}}
 * Swedish: {{t+|sv|herr|c}}, {{t+|sv|herre|c}}
-* Tajik: {{t+|tg|ҷаноб}}
+* Tajik: {{t+|tg|ҷаноб}}, {{t|tg|оғо}}
 * Thai: {{t+|th|ท่าน|sc=Thai}}, {{t|th|เสอร์|sc=Thai}}
-* Turkish: {{t+|tr|beyefendi}}, {{t+|tr|efendi}}
+* Turkish: {{t+|tr|beyefendi}}, {{t+|tr|efendi}}, {{t+|tr|ağa}}
 * Turkmen: {{t+|tk|jenap}}
 * Ukrainian: {{t|uk|пан|m}}
 * Urdu: {{t|ur|صاحب|m|tr=sāhib|sc=ur-Arab}}
-* Uzbek: {{t+|uz|janob}}
+* Uzbek: {{t+|uz|janob}}, {{t|uz|agʻa}}
 * Vietnamese: {{t+|vi|ngài}}
 * Yiddish: {{t|yi|מײַן הער|m}}
 {{trans-bottom}}
