t+ug:[[جاناپ]] ([[WT:EDIT|Assisted]]) <sir#41463693>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -142,6 +142,7 @@ From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from 
 * Turkmen: {{t+|tk|jenap}}
 * Ukrainian: {{t|uk|пан|m}}
 * Urdu: {{t|ur|صاحب|m|tr=sāhib|sc=ur-Arab}}
+* Uyghur: {{t|ug|جاناپ}}
 * Uzbek: {{t+|uz|janob}}, {{t|uz|agʻa}}
 * Vietnamese: {{t+|vi|ngài}}
 * Yiddish: {{t|yi|מײַן הער|m}}
