t+ur:[[جناب]] t+fa:[[جناب]] t+ur:[[سر]] ([[WT:EDIT|Assisted]]) <sir#41463703>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -123,7 +123,7 @@ From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from 
 * Ndzwani Comorian: {{t|wni|mwenye}}
 * Norwegian:
 *: Bokmål: {{t+|nb|herre|m}}
-* Persian: {{t+|fa|آقا|tr=âqâ|sc=fa-Arab}}
+* Persian: {{t+|fa|آقا|tr=âqâ|sc=fa-Arab}}, {{t+|fa|جناب|tr=jenâb}}
 * Polish: {{t+|pl|pan|m}}, {{t|pl|panie|m}} ([[vocative case]])
 * Portuguese: {{t+|pt|senhor|m}}
 * Quechua: {{t|qu|upiy}}
@@ -141,7 +141,7 @@ From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from 
 * Turkish: {{t+|tr|beyefendi}}, {{t+|tr|efendi}}, {{t+|tr|ağa}}
 * Turkmen: {{t+|tk|jenap}}
 * Ukrainian: {{t|uk|пан|m}}
-* Urdu: {{t|ur|صاحب|m|tr=sāhib|sc=ur-Arab}}
+* Urdu: {{t|ur|صاحب|m|tr=sāhib|sc=ur-Arab}}, {{t|ur|جناب|m|tr=janāb}}, {{t+|ur|سر|m|tr=sar}}
 * Uyghur: {{t|ug|جاناپ}}
 * Uzbek: {{t+|uz|janob}}, {{t|uz|agʻa}}
 * Vietnamese: {{t+|vi|ngài}}
