--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -137,7 +137,7 @@ From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from 
 * Spanish: {{t+|es|señor|m}}
 * Swedish: {{t+|sv|herr|c}}, {{t+|sv|herre|c}}
 * Tajik: {{t+|tg|ҷаноб}}, {{t|tg|оғо}}
-* Thai: {{t+|th|ท่าน|sc=Thai}}, {{t|th|เสอร์|sc=Thai}}
+* Thai: {{t+|th|ท่าน}}, {{t|th|เซอร์}}
 * Turkish: {{t+|tr|beyefendi}}, {{t+|tr|efendi}}, {{t+|tr|ağa}}
 * Turkmen: {{t+|tk|jenap}}
 * Ukrainian: {{t|uk|пан|m}}
