--- a/en/m/macropsia.801853.wikitext
+++ b/en/m/macropsia.801853.wikitext
@@ -6,7 +6,7 @@
 # {{lb|en|pathology}} A disorder in which objects appear much [[larger]] than normal, most often the result of a [[neurological]] dysfunction.
 
 ====Synonyms====
-* {{l|en|macropsy}}
+* {{l|en|Brobdingnagian vision}}, {{l|en|macropsy}}
 
 ====Antonyms====
 * {{l|en|micropsia}}
