--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -59,6 +59,7 @@ From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from 
 {{trans-mid}}
 * Portuguese: {{t+|pt|senhor|m}}
 * Russian: {{t+|ru|господи́н|m|sc=Cyrl}}
+* Thai: {{t|th|เซอร์}}
 * Turkish: {{t+|tr|efendim}}
 * Ukrainian: {{t|uk|пан|m|sc=Cyrl}}
 {{trans-bottom}}
@@ -137,7 +138,7 @@ From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from 
 * Spanish: {{t+|es|señor|m}}
 * Swedish: {{t+|sv|herr|c}}, {{t+|sv|herre|c}}
 * Tajik: {{t+|tg|ҷаноб}}, {{t|tg|оғо}}
-* Thai: {{t+|th|ท่าน}}, {{t|th|เซอร์}}
+* Thai: {{t+|th|ท่าน}}
 * Turkish: {{t+|tr|beyefendi}}, {{t+|tr|efendi}}, {{t+|tr|ağa}}
 * Turkmen: {{t+|tk|jenap}}
 * Ukrainian: {{t|uk|пан|m}}
