--- a/en/i/Ionia.775850.wikitext
+++ b/en/i/Ionia.775850.wikitext
@@ -47,7 +47,7 @@ From the {{der|la|grc|Ἰωνία}}.
 * {{la-IPA|i.ōnia}}
 
 ===Proper noun===
-{{la-proper noun|new=1|Iōnia|Iōniae|f|first}}
+{{la-proper noun|Iōnia|Iōniae|f|first}}
 
 # {{l|en|Ionia}} {{gloss|region in Asia Minor}}
 
