rfp and add [[Category:English words containing Q not followed by U]] <QALY#41497833>

--- a/en/q/QALY.855221.wikitext
+++ b/en/q/QALY.855221.wikitext
@@ -1,7 +1,11 @@
 ==English==
 
-===Initialism===
-{{rfc-header|Initialism}}
-{{head|en|initialism}}
+===Pronunciation===
+{{rfp|lang=en}}
 
-# [[quality-adjusted life year]]
+===Noun===
+{{en-noun}}
+
+# {{initialism of|quality-adjusted life year|lang=en}}
+
+[[Category:English words containing Q not followed by U]]
