--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -255,7 +255,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 
 ===Noun===
 {{en-noun}}
-[[Image:PB Scrope CoA.png|thumb|150px|Azure a '''bend''' or, the arms of Scrope.]]
+[[Image:PB Scrope CoA.png|thumb|150px|Azure a '''bend''' or, the arms of Scrope]]
 # A [[curve]].
 #* '''1968''', {{w|Johnny Cash}}, ''[[wikia:lyrics:Johnny Cash:Folsom Prison Blues|Folsom Prison Blues]]''
 #*: ''I hear the train a comin'/It's rolling round the '''bend'''''
@@ -268,7 +268,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 # {{lb|en|in the plural|medicine|diving|with ''the''}} A [[severe]] [[condition]] caused by excessively quick [[decompression]], causing bubbles of [[nitrogen]] to form in the [[blood]]; [[decompression sickness]].
 #: {{ux|en|A diver who stays deep for too long must ascend very slowly in order to prevent the '''bends'''.}}
 # {{lb|en|heraldiccharge}} One of the [[honourable]] [[ordinary|ordinaries]] formed by two [[diagonal]] [[line]]s drawn from the [[dexter chief]] to the [[sinister base]]; it generally occupies a [[fifth]] part of the [[shield]] if [[uncharged]], but if [[charged]] one [[third]].
-#: {{ux|en|In the case of Scrope v Grosvenor, regarding the use of the arms Azure a '''bend''' or, it was won by Scrope.}}
+#* {{quote-book|year=1968|author=Charles MacKinnon of Dunakin|title=The Observer's Book of Heraldry|pages=63-64|passage=Perhaps the most celebrated coat of arms is that of Scrope, which is Azure a '''bend''' Or. This is the coat over which, from 1385 to 1390, Sir Robert le Grosvenor and Sir Richard le Scrope invoked the High Court of Chivalry to decide which of them had the right to bear these arms. Chaucer gave evidence before the court. In the end the arms were awarded to Scrope, and Grosvenor was ordered to difference with a bordure Argent. This he disdained to do, and being highly dissatisfied with the verdict he appealed to Richard II who altered the decision of the court by refusing to allow the '''bend''' to Grosvenor ''at all''! Grosvenor then adopted a garb, or sheaf of corn.}}
 # {{lb|en|obsolete}} Turn; purpose; inclination; ends.
 #* Fletcher
 #*: Farewell, poor swain; thou art not for my '''bend'''.
