--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -52,9 +52,10 @@
 * Norman: {{t|nrf|futhet|m}}
 * Korean: {{t|ko|페레트|sc=Kore}}
 * Latgalian: {{t|ltg|saskys}}
+* Latin: {{t|la|viverra|f}}
 * Latvian: {{t|lv|sesks|m}}
-* Lithuanian: {{t+|lt|šeškas|m}}
 {{trans-mid}}
+* Lithuanian: {{t+|lt|šeškas|m}}
 * Macedonian: {{t|mk|ласица|f}} <!-- weasel ?-->
 * Malay: {{t|ms|feret}}
 * Maltese: {{t|mt|nemes}}
