--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -218,7 +218,7 @@ From {{der|nn|la|domina}}, via {{bor|nn|fro|dame|notext=1}} and late {{inh|nn|no
 From {{inh|fro|LL.|domna}}, shortened variant of {{inh|fro|la|domina}}.
 
 ===Pronunciation===
-* {{IPA|/da.mə/|lang=fro}}
+* {{IPA|/ˈdã.mə/|lang=fro}}
 * {{rhymes|amə|lang=fro}}
 
 ===Noun===
