--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -20,6 +20,7 @@ From {{etyl|ine-pro|grc}} {{m|ine-pro|*ḱwṓ}}. Cognates include Latin {{m|la|
 ====Derived terms====
 * {{l|grc|κῠνάγχη}}
 * {{l|grc|κῠνίδιον}}
+* {{l|grc|κῠνοδέσμη}}
 * {{l|grc|κῠνόδους}}
 * {{l|grc|κῠνόμαζον}}
 
