t+th:[[เออ]] ([[WT:EDIT|Assisted]]) <yeah#41566421>

--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -57,6 +57,7 @@ Alternative (but less likely) etymology derives ''yeah'' from a drawling pronunc
 * Slovene: {{t+|sl|ja}}
 * Spanish: {{t+|es|sí}}
 * Swedish: {{t+|sv|ja|n}}
+* Thai: {{t+|th|เออ}}
 * Urdu: {{t|ur|ہاں|tr=hā̃|sc=ur-Arab}}
 * Vietnamese: {{t|vi|ừ}} {{qualifier|informal}}, {{t+|vi|ờ}} {{qualifier|informal}}
 * Volapük: {{t+|vo|si}}
