/* Derived terms */ <bound#41591272>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -161,7 +161,7 @@ From {{etyl|enm|en}} {{m|en|bounde}}, from {{etyl|fro|en}} {{m|en|bunne}}, from 
 {{rel-mid}}
 * {{l|en|unbounded}}
 {{rel-mid}}
-
+* {{l|en|metes and bounds}}
 {{rel-bottom}}
 
 =====Translations=====
