--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -8,6 +8,9 @@
 # A soldier or combatant who is captured by the enemy. Abbreviations {{m|en|POW}}, {{m|en|PW}}.
 #: ''As a '''prisoner of war''', he was interrogated by his enemy captors.''
 
+====Derived terms====
+* {{l|en|prisoner-of-war camp}}
+
 ====Translations====
 {{trans-top|soldier or combatant captured by the enemy}}
 * Arabic: {{t|ar|أَسِير اَلْحَرْب|m}}, {{t|ar|أَسِير|m}}
