--- a/en/p/POW.4325.wikitext
+++ b/en/p/POW.4325.wikitext
@@ -11,6 +11,9 @@
 ====Synonyms====
 * {{l|en|PW}} {{qualifier|Canada|military}}
 
+====Derived terms====
+* [[POW camp]]
+
 ====Translations====
 {{trans-top|initialism of prisoner of war}}
 {{trans-mid}}
