/* Adverb */ no [[sugar]] [[add]]ed <NSA#41663691>

--- a/en/n/NSA.26206.wikitext
+++ b/en/n/NSA.26206.wikitext
@@ -5,6 +5,7 @@
 {{en-adv|-}}
 
 # {{initialism of|no strings attached|lang=en}}
+# {{initialism of|no [[sugar]] [[add]]ed|lang=en}}
 
 ===Adjective===
 {{en-adj|-}}
