Fixing incorrect eo trans. <at#41665557>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -76,7 +76,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Czech: {{t+|cs|u}}, {{t+|cs|při}}
 * Danish: {{t+|da|på}}
 * Dutch: {{t+|nl|op}}, {{t+|nl|bij}}
-* Esperanto: {{t+|eo|sur}}
+* Esperanto: {{t+|eo|ĉe}}
 * Faroese: {{t|fo|í}} / {{t|fo|á}} / {{t|fo|hjá}} / {{t|fo|til}}
 * Finnish: [[-lla]] / [[-llä]] ''([[adessive case]])''; <br> [[-ssa]] / [[-ssä]] ''([[inessive case]])''
 * French: {{t+|fr|à}}, {{t+|fr|en}}
