--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -43,6 +43,7 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 * Korean: {{t-needed|ko}}
 * Latin: {{t|la|spondere}}, {{t|la|vovere}}
 * Malay: {{t|ms|ikrar}}
+* Occitan: {{t|oc|prometre}}
 * Polish: {{t+|pl|obiecać}}
 * Portuguese: {{t+|pt|prometer}}
 * Romanian: {{t+|ro|promite}}, {{t+|ro|garanta}}
