--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -68,6 +68,7 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 * German: {{t+|de|verpfänden}}
 * Latgalian: {{t|ltg|aizlyka}}
 * Latvian: {{t|lv|ķīla}}
+* Occitan: {{t|oc|empenhar}}
 * Polish: {{t|pl|złożyć zastaw}}
 {{trans-mid}}
 * Russian: {{t|ru|[[отдава́ть]] в [[зало́г]]|impf}}, {{t|ru|[[отда́ть]] в [[зало́г]]|pf}}, {{t+|ru|закла́дывать|impf}}, {{t+|ru|заложи́ть|pf}}
