--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -121,6 +121,7 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 {{trans-mid}}
 * Malay: {{t|ms|ikrar}}
 * Maori: {{t|mi|takoha}}
+* Occitan: {{t|oc|promessa|f}}
 * Polish: {{t+|pl|obietnica|f}}
 * Portuguese: {{t+|pt|promessa|f}}, {{t+|pt|penhor|m}}
 * Romanian: {{t+|ro|legământ}}, {{t+|ro|promisiune}} (''fermă'')
