t+cs:[[obklopovat]] ([[WT:EDIT|Assisted]]) <bound#41679083>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -167,6 +167,7 @@ From {{etyl|enm|en}} {{m|en|bounde}}, from {{etyl|fro|en}} {{m|en|bunne}}, from 
 =====Translations=====
 {{trans-top|to surround a territory}}
 * Bulgarian: {{t+|bg|ограничавам}}
+* Czech: {{t|cs|obklopovat|impf}}
 * Dutch: {{t+|nl|begrenzen}}, {{t+|nl|omringen}}
 * Estonian: {{t|et|tõkestama}}
 * Finnish: {{t+|fi|reunustaa}}
