--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -225,7 +225,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 
 {{trans-top|law: corporeal object}}
 {{trans-mid}}
-* German: {{t+|de|Sache|n}}
+* German: {{t+|de|Sache|f}}
 * Japanese: {{t+|ja|物}}
 * Thai: {{t+|th|ทรัพย์}}
 {{trans-bottom}}
